--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="faq">
             <p class="question">
               What is Frontend Mentor, and how will it help me?
-              <img src="assets/images/icon-plus.svg">
+              <img src="assets/images/icon-plus.svg" alt="toggle icon">
             </p>
             <p class="answer">
               Frontend Mentor offers realistic coding challenges to help developers improve their 
@@ -54,7 +54,7 @@
           <div class="faq">
             <p class="question">
               Is Frontend Mentor free?
-              <img src="assets/images/icon-plus.svg">
+              <img src="assets/images/icon-plus.svg" alt="toggle icon">
             </p>
             <p class="answer">
               Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
@@ -67,7 +67,7 @@
           <div class="faq">
             <p class="question">
               Can I use Frontend Mentor projects in my portfolio?
-              <img src="assets/images/icon-plus.svg">
+              <img src="assets/images/icon-plus.svg" alt="toggle icon">
             </p>
             <p class="answer">
               Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
@@ -80,7 +80,7 @@
           <div class="faq">
             <p class="question">
               How can I get help if I'm stuck on a challenge?
-              <img src="assets/images/icon-plus.svg">
+              <img src="assets/images/icon-plus.svg" alt="toggle icon">
             </p>
             <p class="answer">
               The best place to get help is inside Frontend Mentor's Discord community. There's a help 
